8237776: Shenandoah: Wrong result with Lucene test

Reviewed-by: rkennke, zgu, shade